log
Tue 26 Mar 2024 08:47:48 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c:82:7: error: redefinition of ‘createList’
   82 | List *createList() {
      |       ^~~~~~~~~~
list.c:31:8: note: previous definition of ‘createList’ with type ‘List *(void)’ {aka ‘struct List *(void)’}
   31 | List * createList() {
      |        ^~~~~~~~~~
Compilation failed
6e22992
Tue 26 Mar 2024 08:48:15 PM UTC: 
 list.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  1|5
total_score: 10/70
a55db85
Tue 26 Mar 2024 08:52:10 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 25/70
9ec84d2
Tue 26 Mar 2024 09:03:09 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
9076509
Tue 26 Mar 2024 09:12:09 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
fe5bc40
Tue 26 Mar 2024 09:19:17 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a95c97f
Tue 26 Mar 2024 10:28:23 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7e8d9b1
Tue 26 Mar 2024 10:36:07 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
485c093
Tue 26 Mar 2024 10:37:17 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
e3d8029
Tue 26 Mar 2024 10:38:07 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3184221
Tue 26 Mar 2024 10:38:44 PM UTC: 
 list.c | 10 ----------
 1 file changed, 10 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:78:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   78 |   Node *aux = list->head;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
a712253
Tue 26 Mar 2024 10:42:24 PM UTC: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|1
total_score: 55/70
e444baa
Tue 26 Mar 2024 10:50:36 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|1
total_score: 55/70
5a87d58
Tue 26 Mar 2024 10:52:15 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  11|1
total_score: 55/70
ed09070
Tue 26 Mar 2024 10:52:31 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  11|1
total_score: 55/70
27d83c4
